# KeywordExtractor

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  gunicorn_conf.py  pyproject.toml  requirements.txt
app/: gunicorn_conf.py  gunicorn_log.py  keyword_extractor.py  main.py
core/app/: main.py
core/gunicorn/: gunicorn_conf.py  gunicorn_log_conf.ini
nginx/: Dockerfile  nginx.conf
