[tool.poetry]
name = "keywordextractor"
version = "0.1.0"
description = "Extracts keywords out of the given sentence."
authors = ["Shashwat79802 <shashwatg79802@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
transformers = "^4.39.2"
torch = "^2.2.2"
pyyaml = "^6.0.1"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
black = "^24.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
